<resources>
    <string name="app_name">Aether</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="name">Name</string>
    <string name="hint_nsu_id">NSU ID</string>
    <string name="check_point">Get Start</string>
    <string name="choose_you">CHOOSE YOU</string>


    <!--Auth-->
    <string name="verificationCode" type="id">Verification Code</string>


    <string name="start">START</string>
    <string name="signin">Sign in</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="sign_in_with_social_network">SIGN IN with social network</string>
    <string name="or">OR</string>

    <!--API-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!-- Email Auth-->
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="password">Password</string>
    <string name="register_new_account">Register new account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="courses">COURSES</string>
    <string name="title_activity_enroll_courses">EnrollCoursesActivity</string>
    <string name="course_description">Course Description</string>
    <string name="join">JOIN</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="enroll">Enroll</string>
    <string name="enroll_description">Enter the unique course code \ngiven by the teacher to read the slides</string>
    <string name="enroll_to_course">Enroll to course</string>
    <string name="done">Done!</string>


</resources>

