<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:background="@drawable/backdrop"
android:paddingTop="48dp"
android:layout_margin="8sp"
tools:context=".views.EnrollingActivity">

<TextView
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enroll_to_course"/>

<TextView
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/enroll_description"/>

<EditText
    android:id="@+id/et_course_code"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:maxLength="6"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:background="@drawable/img_sign_in"
    android:textAlignment="center"
    tools:ignore="autoFill,LabelFor,TextFields" />

<ProgressBar
    android:id="@+id/progressbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/et_course_code"
    android:layout_centerHorizontal="true"
    android:visibility="invisible"
    tools:ignore="ObsoleteLayoutParam" />

<Button
    android:id="@+id/btn_enroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/enroll"
    android:background="@drawable/selector_button2"
    android:textColor="@android:color/white"
    android:textStyle="bold" />

</LinearLayout>